<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{57f7a5c3-a76b-43c9-83d1-2d6b57556dad}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
			AxisX : AXIS_REF;
			AxisY : AXIS_REF;
			
			//Moter Power	
			AxisX_Power_Fuc : MC_Power;
			AxisY_Power_Fuc : MC_Power;
					
			OnMoterX : BOOL;
			OnMoterY : BOOL;
			
			//***************Moter Move***************//
			AxisX_AbMove_Fuc :MC_MoveAbsolute;
			AxisY_AbMove_Fuc :MC_MoveAbsolute;
			
			//Moter GetVelocity
			X_GetVel: MC_ReadActualVelocity;
   			Y_GetVel: MC_ReadActualVelocity;
			X_Vel  : LREAL;
			Y_Vel  : LREAL;	
			
			//Moter GetPosition
			X_GetPos :MC_ReadActualPosition;
			Y_GetPos :MC_ReadActualPosition;
	  		X_Pos : LREAL;	  	  
	  		Y_Pos : LREAL;
			
			//Input
			X_Command_Vel : LREAL := 200;     
			X_Command_Acc : LREAL :=200;
			X_Command_Dec : LREAL :=200;
			X_AbMove_Ex : BOOL := FALSE;
			X_Command_Pos : LREAL :=0;
			
			Y_Command_Vel : LREAL := 200;     
			Y_Command_Acc : LREAL := 200;
			Y_Command_Dec : LREAL := 200;
			Y_AbMove_Ex : BOOL := FALSE;
			Y_Command_Pos : LREAL := 0;
			
				
			//Output
			X_Busy : BOOL;
			Y_Busy : BOOL;
			
			X_Error :BOOL;
			Y_Error :BOOL;
			
			X_ErrorID :UDINT;
			Y_ErrorID :UDINT;
			
			X_Done : BOOL;
			Y_Done : BOOL;	
		 //***************Moter Move End***************//
			
			
			//PID 
			fbCoEWrite_X:FB_CoEWrite;
			fbCoEWrite_Y:FB_CoEWrite;
			
	        fbCoEReadP_X:FB_CoERead;
			fbCoEReadI_X:FB_CoERead;
			fbCoEReadD_X:FB_CoERead;
			
			fbCoEReadP_Y:FB_CoERead;
			fbCoEReadI_Y:FB_CoERead;
			fbCoEReadD_Y:FB_CoERead;
			
			fbCoERead_Y:FB_CoERead;
			
			Index: WORD :=16#3100; 
			X_Gain: WORD :=400 ;
			Y_Gain: WORD :=400 ;
			X_COE_Ex :BOOL :=FALSE;
			Y_COE_Ex :BOOL :=FALSE;
			CompleteAccess: BOOL := FALSE; 
   			Success: BOOL; 
			
			X_GetP_Gain : WORD;
			X_GetI_Gain : WORD;
			X_GetD_Gain : WORD;
			X_CoERead_EX  :BOOL:=TRUE;
			
			Y_GetP_Gain : WORD;
			Y_GetI_Gain : WORD;
			Y_GetD_Gain : WORD;
			Y_CoERead_EX  :BOOL:=TRUE;
			//PID End
			
			
			
			

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>