<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Get_PID_Gain" Id="{2d4b600f-bed5-4753-8c95-a2b8d2aec812}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Get_PID_Gain : bool
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL.fbCoEReadP_X(
		Axis :=GVL.AxisX,		
		NetId := '5.33.182.40.1.1', 
  		Index := 16#3100,
  		pDstBuf := ADR(GVL.X_GetP_Gain), 
  		BufLen := SIZEOF(GVL.X_GetP_Gain), 
  		Execute := GVL.X_CoERead_EX, 
  		Timeout := T#1S, 	
	);	
GVL.fbCoEReadD_X(
		Axis :=GVL.AxisX,		
		NetId := '5.33.182.40.1.1', 
  		Index := 16#3101,
  		pDstBuf := ADR(GVL.X_GetD_Gain), 
  		BufLen := SIZEOF(GVL.X_GetD_Gain), 
  		Execute := GVL.X_CoERead_EX, 
  		Timeout := T#1S, 	
		
	);	
GVL.fbCoEReadI_X(
		Axis :=GVL.AxisX,		
		NetId := '5.33.182.40.1.1', 
  		Index := 16#3102,
  		pDstBuf := ADR(GVL.X_GetI_Gain), 
  		BufLen := SIZEOF(GVL.X_GetI_Gain), 
  		Execute := GVL.X_CoERead_EX, 
  		Timeout := T#1S, 	
	);	
GVL.X_CoERead_EX := FALSE;
	
GVL.fbCoEReadP_Y(
		Axis :=GVL.AxisY,		
		NetId := '5.33.182.40.1.1', 
  		Index := 16#3100,
  		pDstBuf := ADR(GVL.Y_GetP_Gain), 
  		BufLen := SIZEOF(GVL.Y_GetP_Gain), 
  		Execute := GVL.Y_CoERead_EX, 
  		Timeout := T#1S, 	
	);	
GVL.fbCoEReadD_Y(
		Axis :=GVL.AxisY,		
		NetId := '5.33.182.40.1.1', 
  		Index := 16#3101,
  		pDstBuf := ADR(GVL.Y_GetD_Gain), 
  		BufLen := SIZEOF(GVL.Y_GetD_Gain), 
  		Execute := GVL.Y_CoERead_EX, 
  		Timeout := T#1S, 	
		
	);	
GVL.fbCoEReadI_Y(
		Axis :=GVL.AxisY,		
		NetId := '5.33.182.40.1.1', 
  		Index := 16#3102,
  		pDstBuf := ADR(GVL.Y_GetI_Gain), 
  		BufLen := SIZEOF(GVL.X_GetI_Gain), 
  		Execute := GVL.Y_CoERead_EX, 
  		Timeout := T#1S, 	
	);	
GVL.Y_CoERead_EX := FALSE;

	]]></ST>
    </Implementation>
    <LineIds Name="Get_PID_Gain">
      <LineId Id="8" Count="16" />
      <LineId Id="39" Count="0" />
      <LineId Id="25" Count="8" />
      <LineId Id="7" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="55" Count="27" />
      <LineId Id="54" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="46" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>